# Seam-Carving-CUDA

./: .gitignore  CMakeLists.txt  README.md
lib/: opencv_core452.lib  opencv_cudaimgproc452.lib  opencv_highgui452.lib  opencv_imgcodecs452.lib  opencv_imgproc452.lib  opencv_photo452.lib  opencv_videoio452.lib
src/: cpu.cpp  cuda.cpp  getopt.hpp  kernel.cu  kernel.exp  main.cpp  main.exp  main.lib  parallel.cpp  parallel.exp  parallel.h  project.h  sequential.cpp  val.py
